--- a/src/client/assessment/components/Graph/common/Mark.css
+++ b/src/client/assessment/components/Graph/common/Mark.css
@@ -1,6 +1,5 @@
 .mark {
-  min-width: 40px;
-  max-width: 55px;
+  width: 55px !important;
   height: 45px !important;
   padding: 2px;
   border-radius: 4px;
@@ -8,12 +7,8 @@
   border: 1px solid #e6e6e6 !important;
   cursor: pointer;
   font-family: unset !important;
-  font-size: unset !important;
+  font-size: 14px !important;
   opacity: 1;
-}
-
-.mark.fr-box {
-  width: unset;
 }
 
 .mark.mounted {
