--- a/src/client/index.css
+++ b/src/client/index.css
@@ -2041,3 +2041,9 @@ span.token.active-word {
 .ant-select-selection:active {
   box-shadow: 0px 0px 1px 1px #5eb50066;
 }
+
+.ant-modal-wrap.test-preview-modal {
+  overflow: unset;
+  width: 100%;
+  height: 100vh;
+}
