--- a/src/client/assessment/components/Graph/common/FroalaEditorInput.css
+++ b/src/client/assessment/components/Graph/common/FroalaEditorInput.css
@@ -13,6 +13,8 @@
   color: #444444;
   opacity: 1 !important;
   transform: translate(25%, 50%);
+  min-width: 15px;
+  min-height: 26px;
   width: unset;
 }
 
