--- a/src/client/assessment/components/Graph/common/Label.css
+++ b/src/client/assessment/components/Graph/common/Label.css
@@ -12,10 +12,7 @@
   letter-spacing: 0.2px;
   color: #444444;
   opacity: 1 !important;
-  /* transform: translate(25%, 50%);
-  min-width: 15px;
-  min-height: 26px; */
-  transform: translate(0, 50%);
+  transform: translate(10px, 0);
   width: unset;
 }
 
