--- a/src/client/index.css
+++ b/src/client/index.css
@@ -1066,6 +1066,7 @@ textinput::before {
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
   display: flex;
+  justify-content: center;
   /* min-height: 35px; 5043*/
 }
 
