fix(Graph): add drag drop values title to graph with labels

--- a/src/client/assessment/components/Graph/common/Mark.css
+++ b/src/client/assessment/components/Graph/common/Mark.css
@@ -107,3 +107,9 @@
   height: 100%;
   width: auto;
 }
+
+.marks-container-title {
+  transform: translate(4px, 0);
+  font-weight: 700;
+  opacity: 1 !important;
+}
