fix(UI): button color change

--- a/src/client/index.css
+++ b/src/client/index.css
@@ -2072,3 +2072,7 @@ span.token.active-word {
 .sortableHelper {
   z-index: 10000;
 }
+
+.ant-modal .ant-switch-checked {
+  background-color: #00ad50;
+}
