--- a/src/client/assessment/components/Graph/common/Mark.css
+++ b/src/client/assessment/components/Graph/common/Mark.css
@@ -5,7 +5,7 @@
   border-radius: 4px;
   background-color: #ffffff;
   border: 1px solid #e6e6e6 !important;
-  cursor: pointer;
+  cursor: pointer !important;
   font-family: unset !important;
   font-size: 14px !important;
   opacity: 1;
