--- a/src/client/index.css
+++ b/src/client/index.css
@@ -1256,9 +1256,9 @@ p {
 span.token,
 span.token > *,
 span.token.answer {
-  padding: 1px;
+  /* padding: 1px; */
   line-height: 28px;
-  margin: 0 2px;
+  /* margin: 0 2px; */
   cursor: pointer;
   border: 1px solid rgba(255, 255, 255, 0);
 }
