--- a/src/client/index.css
+++ b/src/client/index.css
@@ -646,7 +646,7 @@ table.quill-table td {
   padding: 0 !important;
   height: 100%;
   /* max-height: calc(100vh - 300px); */
-  overflow-y: hidden;
+  padding-bottom: 15px !important;
 }
 
 .imagedropdown_template_box.small {
