--- a/src/client/index.css
+++ b/src/client/index.css
@@ -1039,7 +1039,9 @@ textinput::before {
   color: white;
   display: inline-flex;
   align-items: center;
+  justify-content: center;
   height: 100%;
+  width: 40px;
   background: #878282;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
