--- a/src/client/assessment/components/Graph/common/Mark.css
+++ b/src/client/assessment/components/Graph/common/Mark.css
@@ -1,6 +1,7 @@
 .mark {
-  width: 55px !important;
-  height: 45px !important;
+  width: 120px !important;
+  word-break: break-all;
+  max-width: 55px;
   padding: 2px;
   border-radius: 4px;
   background-color: #ffffff;
