--- a/src/client/assessment/components/Graph/common/DragDrop.css
+++ b/src/client/assessment/components/Graph/common/DragDrop.css
@@ -21,8 +21,8 @@
 }
 
 .drag-drop img.fr-dii {
-  max-height: 40px !important;
-  width: auto !important;
+  max-height: 40px;
+  max-width: 120px;
 }
 
 .drag-drop .drag-drop-content {
