fix(EV-9009): input box alignment in clozeMath (#5690)

--- a/src/client/index.css
+++ b/src/client/index.css
@@ -1884,7 +1884,7 @@ span.token.active-word {
 
 .jsx-parser .mq-math-mode {
   padding: 2px 4px;
-  margin: 2px 4px;
+  margin-right: 4px;
   border: 1px solid #d9d9d9;
   border-radius: 4px;
   min-width: 60px;
