--- a/src/client/index.css
+++ b/src/client/index.css
@@ -1883,8 +1883,6 @@ span.token.active-word {
 }
 
 .jsx-parser .mq-math-mode {
-  padding: 2px 4px;
-  margin-right: 4px;
   border: 1px solid #d9d9d9;
   border-radius: 4px;
   min-width: 60px;
@@ -1898,12 +1896,10 @@ span.token.active-word {
 }
 
 .jsx-parser p {
-  /* display: flex;
+  display: flex;
   flex-wrap: wrap;
-  align-items: center; */
+  align-items: center;
   margin-bottom: 8px;
-  /* font-size: 16px; */
-  font-weight: 400;
 }
 
 .katex .mfrac .frac-line {
