fix(EV-8324): set math fraction content according to the parent font-… (#5747)
* fix(EV-8324): set math fraction content according to the parent font-size

* Update index.css

--- a/src/client/index.css
+++ b/src/client/index.css
@@ -1905,6 +1905,11 @@ span.token.active-word {
 .katex .mfrac .frac-line {
   min-height: 1vh !important;
 }
+
+span.mfrac{
+  font-size: calc(100% + 0.45em);
+}
+
 @media (max-width: 992px) {
   .jsx-parser p {
     font-size: 14px;
