Revert "fix(EV-9461): adjusting the zIndex of header, sidebar n dropdowns (#6064)"
This reverts commit b8e2fdedd209a6d7c7494b99ed10ea0c2d661056.

--- a/src/client/index.css
+++ b/src/client/index.css
@@ -1324,6 +1324,10 @@ span.token.active-word {
   justify-content: space-between;
 }
 
+.ant-select-dropdown {
+  z-index: 100000;
+}
+
 .template_box .ant-select-selection {
   border-color: #fff;
 }
