--- a/src/client/index.css
+++ b/src/client/index.css
@@ -1324,8 +1324,9 @@ span.token.active-word {
   justify-content: space-between;
 }
 
-.ant-select-dropdown {
-  z-index: 100000;
+.ant-select-dropdown,
+.ant-dropdown {
+  z-index: 998; /*EV-9461 header has z-index 999 */
 }
 
 .template_box .ant-select-selection {
@@ -1334,6 +1335,7 @@ span.token.active-word {
 
 .template_box .anticon svg {
   fill: #0e93dc;
+  :nonline ;
 }
 
 .ant-input {
