--- a/src/client/assessment/components/Graph/common/Mark.css
+++ b/src/client/assessment/components/Graph/common/Mark.css
@@ -1,7 +1,7 @@
 .mark {
   height: 45px !important;
   width: 120px !important;
-  word-break: break-word;
+  word-break: break-all;
   max-width: 55px;
   padding: 2px;
   border-radius: 4px;
