fix(orderlist): refactor order list type (#6052)
* fix(sortlist): refator sort list

* fix(orderlist): refactor order list type

* fix(sortlist): fixed dragpreview issue

* fix(clssification): dragpreview issue

* ifx(autoscroll): set height of header and question area in test page

* fix(sortlist) user is able to set origientation

* fix(sortlist): show full content in correct answer section

* fix(sortlist) autoscroll is working in author

* fix(sortlist): show correct answers with correct evaluataion in review page

* fix(sortlist): prevent user click at student review and LCB

* fix(sortlist): scrollbar issue on clicking show/check

* fix(sortlist) show entire content on hover dragItem

* fix(sortlist): show entire content on hover in correct answer section

* fix(orderlist): auto-scroll work at both student and author

* fix(orderlist): show entire content on hover

* fix(orderlist): fix page crash at student side

* fix(orderlist) show entire content

* fix(orderlist): separate alternate answers by comma

* fix(orderlist): fixed inline mode issues

* fix(orderlist): fixed correct/wrong answer mark overlapping issue

--- a/src/client/index.css
+++ b/src/client/index.css
@@ -2088,6 +2088,10 @@ span.mfrac {
   z-index: 10000;
 }
 
+.sortableHelper img {
+  max-width: 100%;
+}
+
 .ant-modal .ant-switch-checked {
   background-color: #00ad50;
 }
